[project]
name = "network-shutdown"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomas Sexenian", email = "cuentastomassexenian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "scapy==2.6.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
